--- a/Raul/static/Raul/shopping-cart.css
+++ b/Raul/static/Raul/shopping-cart.css
@@ -2,6 +2,143 @@
     font-family: myFirstFont;
     src: url(avenir-lt-std-35-light.otf);
 }
+
+@media (min-width: 992px){
+    .col-lg-8 {
+        -webkit-box-flex: 0;
+        -ms-flex: 0 0 66.666667%;
+        flex: 0 0 66.666667%;
+        max-width: 66.666667%;
+    }
+}
+@media (min-width: 768px){
+    .col-md-12 {
+        -webkit-box-flex: 0;
+        -ms-flex: 0 0 100%;
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+}
+    
+ @media (min-width: 768px){
+    .col-md-3 {
+        -webkit-box-flex: 0;
+        -ms-flex: 0 0 25%;
+        flex: 0 0 25%;
+    }
+}
+    
+@media (min-width: 768px){
+    .colmd3 {
+        -webkit-box-flex: 0;
+        -ms-flex: 0 0 25%;
+        flex: 0 0 5%;
+        text-align: center;
+    }
+    
+}
+    
+@media (min-width: 768px){
+    .col-md-5 {
+        -webkit-box-flex: 0;
+        -ms-flex: 0 0 41.666667%;
+        flex: 0 0 30%;
+        max-width: 30%;
+    }
+        
+    .col-md-5 .product-info{
+        letter-spacing: 1px;
+        padding:5px 0px;
+    }
+}
+    
+@media (min-width: 768px){
+    .col-md-4 {
+        -webkit-box-flex: 0;
+        -ms-flex: 0 0 33.333333%;
+        flex: 0 0 60%;
+        max-width: 60%;
+    }
+}
+
+@media (min-width: 768px){
+    .col-md-8 {
+        /* -webkit-box-flex: 0; */
+        -ms-flex-: 0 0 20%;
+        flex: 0 0 66.666667%;
+        max-width: 70%;
+    }
+}
+
+@media (min-width: 768px){
+    .column8 {
+        /* -webkit-box-flex: 0; */
+        -ms-flex-: 0 0 20%;
+        flex: 0 0 66.666667%;
+        max-width: 60%;
+    }
+}
+
+@media  only screen and (max-width:768px){
+    .column8 {
+        /* -webkit-box-flex: 0; */
+        -ms-flex-: 0 0 20%;
+        flex: 0 0 66.666667%;
+        max-width: 60%;
+    }
+
+    .col-md-8 {
+        /* -webkit-box-flex: 0; */
+        -ms-flex-: 0 0 20%;
+        flex: 0 0 66.666667%;
+        max-width: 70%;
+    }
+
+    .col-md-4 {
+        -webkit-box-flex: 0;
+        -ms-flex: 0 0 33.333333%;
+        flex: 0 0 60%;
+        max-width: 60%;
+    }
+
+    .col-md-5 {
+        -webkit-box-flex: 0;
+        -ms-flex: 0 0 41.666667%;
+        flex: 0 0 30%;
+        max-width: 30%;
+    }
+        
+    .col-md-5 .product-info{
+        letter-spacing: 1px;
+        padding:5px 0px;
+    }
+
+    .colmd3 {
+        -webkit-box-flex: 0;
+        -ms-flex: 0 0 25%;
+        flex: 0 0 5%;
+        text-align: center;
+    }
+
+    .col-md-12 {
+        -webkit-box-flex: 0;
+        -ms-flex: 0 0 100%;
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+
+    .col-lg-8 {
+        -webkit-box-flex: 0;
+        -ms-flex: 0 0 66.666667%;
+        flex: 0 0 66.666667%;
+        max-width: 66.666667%;
+    }
+
+    .shopping-cart .content{
+        padding:0px;
+    }
+}
+
 body{
     font-family: myFirstFont;
     background-color: #6d6d6d;
@@ -105,82 +242,6 @@ a {
     margin-left: auto;
     padding-top:30px;
 }
-
-@media (min-width: 992px){
-.col-lg-8 {
-    -webkit-box-flex: 0;
-    -ms-flex: 0 0 66.666667%;
-    flex: 0 0 66.666667%;
-    max-width: 66.666667%;
-}
-}
-@media (min-width: 768px){
-.col-md-12 {
-    -webkit-box-flex: 0;
-    -ms-flex: 0 0 100%;
-    flex: 0 0 100%;
-    max-width: 100%;
-}
-}
-
-@media (min-width: 768px){
-.col-md-3 {
-    -webkit-box-flex: 0;
-    -ms-flex: 0 0 25%;
-    flex: 0 0 25%;
-}
-}
-
-@media (min-width: 768px){
-    .colmd3 {
-        -webkit-box-flex: 0;
-        -ms-flex: 0 0 25%;
-        flex: 0 0 5%;
-        text-align: center;
-    }
-
-    }
-
-@media (min-width: 768px){
-.col-md-5 {
-    -webkit-box-flex: 0;
-    -ms-flex: 0 0 41.666667%;
-    flex: 0 0 30%;
-    max-width: 30%;
-}
-
-.col-md-5 .product-info{
-    letter-spacing: 1px;
-    padding:5px 0px;
-}
-}
-
-@media (min-width: 768px){
-.col-md-4 {
-    -webkit-box-flex: 0;
-    -ms-flex: 0 0 33.333333%;
-    flex: 0 0 60%;
-    max-width: 60%;
-}
-}
-
-@media (min-width: 768px){
-.col-md-8 {
-    /* -webkit-box-flex: 0; */
-    -ms-flex-: 0 0 20%;
-    /* flex: 0 0 66.666667%; */
-    max-width: 70%;
-}
-}
-
-@media (min-width: 768px){
-        .column8 {
-            /* -webkit-box-flex: 0; */
-            -ms-flex-: 0 0 20%;
-            /* flex: 0 0 66.666667%; */
-            max-width: 60%;
-        }
-    }
 
 .col, .col-1, .col-10, .col-11, .col-12, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-auto, .col-lg, .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-auto, .col-md, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-auto, .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto {
     position: relative;
@@ -424,8 +485,8 @@ button, input, optgroup, select, textarea {
 		font-size: 22px;
         top: 17px; 
         background: -webkit-linear-gradient(#f8f18e,#d6a55b);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
 	}
 
 	.shopping-cart .items .product .info .quantity {
