--- a/Raul_Inc/templates/Raul_Inc/home.html
+++ b/Raul_Inc/templates/Raul_Inc/home.html
@@ -24,6 +24,32 @@
             left: 0;
             width:100vw;
         }
+
+        .fixed{
+            background-color: transparent;
+        }
+
+        #navcontainers.fixed{
+            background-color: transparent;
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 1;
+            width: 100%;
+            height: 80px;
+            font-size: 12px;
+        }
+
+        #navlists{
+            background-color: transparent;
+        }
+
+        #navlists li {
+            /*background: #000;*/
+            margin-top: 10px;
+            display: inline-block;
+            padding: 0 44px 0 44px;
+        }
         /*
         @media (min-aspect-ratio: 16/9) {
           .fullscreen-bg__video {
@@ -59,9 +85,9 @@
 
 <link rel="stylesheet" type="text/css" href="{% static 'Raul_Inc/CSS/font-awesome.min.css' %}">
 
-<div id="navcontainer" class="fixed">
+<div id="navcontainers" class="fixed">
     <div id="logo" class="home-logo"><img src="{%static 'Raul_Inc/Images/raulAvilaIncFinal.png' %}"/></div>
-    <ul id="navlist">
+    <ul id="navlists">
         <li><a href="{%url 'Raul_Inc_Home' %}">HOME</a></li>
         <li><a href="{%url 'Raul_Inc_Bio' %}">BIO</a></li>
         <li><a href="{%url 'Raul_Inc_Press' %}">PRESS</a></li>
