--- a/Raul/templates/Raul/single_product.html
+++ b/Raul/templates/Raul/single_product.html
@@ -12,6 +12,10 @@
             font-family: 'Roboto', sans-serif;
         }
 
+        .headers{
+            background-color: #6d6d6d;
+        }
+
         .containers1{
             margin:150px auto 100px auto;
         }
