--- a/Raul_Inc/templates/Raul_Inc/cafe.html
+++ b/Raul_Inc/templates/Raul_Inc/cafe.html
@@ -1,10 +1,78 @@
+{%load static%}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Cafe Flor</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="{% static 'Raul_Inc/CSS/cafe.css' %}">
+
+    
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="57x57" href="{% static 'Raul/Favicons/apple-icon-57x57.png' %}">
+    <link rel="apple-touch-icon" sizes="60x60" href="{% static 'Raul/Favicons/apple-icon-60x60.png'%}">
+    <link rel="apple-touch-icon" sizes="72x72" href="{% static 'Raul/Favicons/apple-icon-72x72.png'%}">
+    <link rel="apple-touch-icon" sizes="76x76" href="{% static 'Raul/Favicons/apple-icon-76x76.png'%}">
+    <link rel="apple-touch-icon" sizes="114x114" href="{% static 'Raul/Favicons/apple-icon-114x114.png'%}">
+    <link rel="apple-touch-icon" sizes="120x120" href="{% static 'Raul/Favicons/apple-icon-120x120.png'%}">
+    <link rel="apple-touch-icon" sizes="144x144" href="{% static 'Raul/Favicons/apple-icon-144x144.png'%}">
+    <link rel="apple-touch-icon" sizes="152x152" href="{% static 'Raul/Favicons/apple-icon-152x152.png'%}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'Raul/Favicons/apple-icon-180x180.png'%}">
+    <link rel="icon" type="image/png" sizes="192x192"  href="{% static 'Raul/Favicons/android-icon-192x192.png'%}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'Raul/Favicons/favicon-32x32.png'%}">
+    <link rel="icon" type="image/png" sizes="96x96" href="{% static 'Raul/Favicons/favicon-96x96.png'%}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'Raul/Favicons/favicon-16x16.png'%}">
+    <link rel="manifest" href="{% static 'Raul/Favicons/manifest.json'%}">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="{% static 'Raul/Favicons/ms-icon-144x144.png'%}">
+    <meta name="theme-color" content="#ffffff">
+
 </head>
+
 <body>
+    <div class="sections" >
+        <div class="photo">
+        </div>
+        <div class="heroHeading">
+            <div class="cafeLogo">
+                <img src= "{%static 'Raul_Inc/Images/cafe.png' %}">
+                <div class="menuButton">
+                    <button>
+                        Order Now
+                    </button>
+                    <button>
+                        <a href = "#scrollHere">See Our Menu</a>
+                    </button>
+                </div>
+            </div>
+            
+        </div>
+    </div>
+    <div class="menu" id = "scrollHere">
+        <div class="menuHead">
+            <h1>
+                Menu
+            </h1>
+        </div>
+    </div>
+    <div class="sections1" id = "parallax">
+    </div>
+    <footer>
+        <div class = "hoursOfOperation">
+            <h1>
+                Monday - Friday: 7AM - 8PM
+            </h1>
+            <h1>
+                Phone: 1 (374) 974-7200
+            </h1>
+            <h1>
+                Address: 218 8th Avenue, New York, NY 10011, USA
+            </h1>
+        </div>
+
+    </footer>
 
 </body>
 </html>
