--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -225,7 +225,7 @@
 
 
     <div class ="bannerHead" id = "mainBanner">
-        <video src="{% static 'Raul/Images/Raul_Movie.mp4' %}" autoplay loop muted id = "videoBG"></video>
+        <video src="{% static 'Raul/Images/Raul_Movie_Fast.mp4' %}" autoplay loop muted id = "videoBG"></video>
         <div class = "bannerHeading">
             <figcaption><a href="#shop"><button> explore the shop </button></a></figcaption>
         </div>
