--- a/orders/static/orders/global.css
+++ b/orders/static/orders/global.css
@@ -3,10 +3,6 @@
     src: url(avenir-lt-std-35-light.otf);
 }
 
-
-
-
-
 body, html {
     width: 100%;
     background-color: #6d6d6d;
@@ -98,7 +94,7 @@ body, html {
     padding:0px 0px 50px 0px;
     max-height: auto;
     background-color: rgba(0, 0, 0, 0.2);
-    padding:40px;
+    padding:20px;
 }
 
 .rightColumns{
@@ -168,12 +164,6 @@ td{
     border-top:2px solid #cfbb63;
 }
 
-/* .rightColumn .paymentSection{
-    background-color: rgba(0, 0, 0, 0.2);
-    margin:20px 0px 100px 0px;
-    max-height: auto;
-    padding:0px 40px;
-} */
 
 .paymentSection h1{
     font-size: 50px;
@@ -268,6 +258,7 @@ td{
     padding:16px 32px;
     font-weight: 500;
     margin:10px 200px;
+    font-family: myFirstFont;
 }
 
 .shippingAccordion{
@@ -443,6 +434,7 @@ label {
     padding:16px 32px;
     outline: none;
     border: none;
+    font-family: myFirstFont;
     border-radius: 40px;
     font-weight: 700;
     transition: 0.4s ease-in-out;
@@ -571,6 +563,7 @@ label {
     font-weight: 700;
     border-radius: 40px;
     transition: 1s ease-in-out;
+    font-family: myFirstFont;
 }
 
 .registeredAdd .button:hover{
@@ -585,6 +578,22 @@ label {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     
+}
+
+@media (max-width: 1200px){
+    .checkoutPage{
+        margin:200px 30px;
+    }
+}
+
+@media (max-width:1024px){
+    .checkoutPage{
+        margin:200px 0px;
+    }
+
+    .checkoutPageDivision{
+        
+    }
 }
 
 
