--- a/Raul/static/Raul/style.css
+++ b/Raul/static/Raul/style.css
@@ -208,19 +208,25 @@ h5{
 	margin-left:auto;
 	margin-right: auto;
 	width:120px;
-	height:40px;
 	background-color: rgba(0, 0, 0, 0.7);
 	color:white;
-	border-radius:20px;
+	border-radius:40px;
 	text-align: center;
 	position: relative;
 	top:80%;
 	transition: 0.4s ease-in-out;
 }
+.actions input{
+	background: -webkit-linear-gradient(#f8f18e,#d6a55b);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	outline:none;
+	border:none;
+	padding:16px 10px;
+	font-family: myFirstFont;
+	font-size: 18px;
+	cursor: pointer;
 
-.actions p{
-	padding:10px 0px 0px 0px;
-	transition: 0.4s ease-in-out;
 }
 
 .productTitle{
