--- a/Raul/templates/Raul/categories.html
+++ b/Raul/templates/Raul/categories.html
@@ -41,7 +41,7 @@
                         <form method='POST' action="{% url 'ajax_add_to_cart' product.slug %}">
                             {% csrf_token %}
                             <input type="hidden" name='qty' type='number' placeholder='Quantity' class = "numberOfItems" min="1" max="50" value="1">
-                            <input type='submit' value='Add to cart' onclick="cartNotification()">
+                            <input type='submit' value='Add to Cart' onclick="cartNotification()">
                             </form>
 
                     </div>
