--- a/Raul/templates/Raul/product.html
+++ b/Raul/templates/Raul/product.html
@@ -39,9 +39,13 @@
                     </a>
                     <div class="overlay">
                         <div class="actions">
-                            <p onclick="cartNotification()">Add to Cart</p>
+                            <form method='POST' action="{% url 'ajax_add_to_cart' product.slug %}">
+                                {% csrf_token %}
+                                <input type="hidden" name='qty' type='number' placeholder='Quantity' class = "numberOfItems" min="1" max="50" value="1">
+                                <input type='submit' value='Add to Cart' onclick="cartNotification()">
+                                </form>
+    
                         </div>
-                        
                     </div>
             </div>
             <h5 class="productTitle">{{product.title}}</h5>
